# boomblaster

./: LICENSE  README  README.md
examples/testplay/: DummyApplication.hpp  Makefile.am  configure.ac  main.cpp
include/boomblaster/: AudioAsset.hpp  AudioEngine.hpp
include/boombox/: AudioAsset.hpp  AudioEngine.hpp
ios/boombox/boombox/: boombox.h  boombox.m
ios/boombox/boombox.xcodeproj/: project.pbxproj
ios/boombox/boombox.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/boombox/boombox.xcodeproj/project.xcworkspace/xcuserdata/anttipe.xcuserdatad/: UserInterfaceState.xcuserstate
ios/boombox/boomboxTests/: Info.plist
src/: AudioAsset.cpp  AudioAssetPrivate.cpp  AudioAssetPrivate.hpp  AudioEngine.cpp  AudioEnginePrivate-Android.cpp  AudioEnginePrivate-Pulse.cpp  AudioEnginePrivate-iOS.cpp  AudioEnginePrivate.hpp  AudioResource.cpp  AudioResource.hpp  Resource.hpp  Tracker.cpp  Tracker.hpp  TrackerProducerThread.cpp  TrackerProducerThread.hpp  TrackerSample.cpp  TrackerSample.hpp
src/helpers/: Class.hpp  Exception.hpp  FileHandle.cpp  FileHandle.hpp  Lock.hpp  Log.cpp  Log.hpp  Mutex.cpp  Mutex.hpp  Referenced.cpp  Referenced.hpp  ReferencedPointer.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManagerPrivate.cpp  ResourceManagerPrivate.hpp  RingBuffer.hpp  Thread.cpp  Thread.hpp  Timer.cpp  Timer.hpp  Utilities.hpp
