AC_INIT([testplay], 1.0)
AC_CONFIG_MACRO_DIR([build])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE

CPPFLAGS="$CPPFLAGS -I/usr/local/include/"

MY_DEPENDENCIES="boomblaster"
PKG_CHECK_MODULES(MY_DEPENDENCIES, "$MY_DEPENDENCIES")
AC_SUBST(MY_DEPENDENCIES_CFLAGS)
AC_SUBST(MY_DEPENDENCIES_CPPFLAGS)
AC_SUBST(MY_DEPENDENCIES_LIBS)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
